--- a/clases 9 al 13 de agosto/10 agosto/Briefcase muestra/index.html
+++ b/clases 9 al 13 de agosto/10 agosto/Briefcase muestra/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/helpers.css" />
-    <link rel="stylesheet" href="./assets/css/grid.css" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/helpers.css">
+    <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -53,13 +53,13 @@
     </header>
     <section class="principal-content">
         <div class="photo-developer">
-            <img src="https://scontent.feoh4-4.fna.fbcdn.net/v/t1.6435-9/182530541_10224653805469269_979753361330402745_n.jpg?_nc_cat=107&ccb=1-4&_nc_sid=174925&_nc_eui2=AeF6naNi-eaJUIJ8xNfu8JASXwUapgzC441fBRqmDMLjjQQkVz7jzslfABX7Vsv_eFk&_nc_ohc=IQ54lnVEbEsAX96arpx&_nc_ht=scontent.feoh4-4.fna&oh=1b2762a46bc8b5e3d28c11b9cfaf1f54&oe=613AA9FB" alt="Kevin Rodas Cuartas" class="photo">
+            <img src="https://scontent.feoh4-4.fna.fbcdn.net/v/t1.6435-9/182530541_10224653805469269_979753361330402745_n.jpg?_nc_cat=107&ccb=1-4&_nc_sid=174925&_nc_eui2=AeF6naNi-eaJUIJ8xNfu8JASXwUapgzC441fBRqmDMLjjQQkVz7jzslfABX7Vsv_eFk&_nc_ohc=IQ54lnVEbEsAX96arpx&_nc_ht=scontent.feoh4-4.fna&oh=1b2762a46bc8b5e3d28c11b9cfaf1f54&oe=613AA9FB" alt="Kevin Rodas Cuartas">
         </div>
-          <div class="description-developer">
-              <h4 class="title-description">I Am UI / UX Designer</h4>
-              <p>I am <span class="developer-name">Kevin Rodas</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet similique illum ad. Nobis rem quibusdam quisquam beatae quam distinctio velit optio eius doloremque, perferendis labore veritatis asperiores eligendi a neque?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dolores ut dicta error, odio, eveniet perferendis rerum nobis labore eligendi, accusamus laudantium. Eum delectus maxime libero temporibus eveniet dignissimos optio?</p>
-          </div>
+        <div class="description-developer">
+            <h4 class="title-description">I Am UI / UX Designer</h4>
+            <p>I am <span class="developer-name">Kevin Rodas</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet similique illum ad. Nobis rem quibusdam quisquam beatae quam distinctio velit optio eius doloremque, perferendis labore veritatis asperiores eligendi a neque?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dolores ut dicta error, odio, eveniet perferendis rerum nobis labore eligendi, accusamus laudantium. Eum delectus maxime libero temporibus eveniet dignissimos optio?</p>
+        </div>
     </section>
   </body>
 </html>
