Agregamos funcionalidades con .js

--- a/Briefcase2/index.html
+++ b/Briefcase2/index.html
@@ -19,7 +19,7 @@
     <title>Portafolio Kevin Rodas Cuartas</title>
   </head>
   <body>
-    <header>
+    <header id="header-main">
       <nav>
         <div class="name-page col-4 col-3-responsive">Kevin Developer</div>
         <div class="menu col-8 col-9-responsive">
