funcionalidades scroll con.js

--- a/Briefcase2/index.html
+++ b/Briefcase2/index.html
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </nav>
-      <div class="header-main-content">
+      <div class="header-main-content" id="about">
         <div class="col-6 col-12 title">
           <h1>Kevin Developer</h1>
           <p>
